Refactor json data structures with @type